--- a/.github/workflows/workflow-summary.yml
+++ b/.github/workflows/workflow-summary.yml
@@ -107,7 +107,7 @@ jobs:
             build_date=$(python -c "from datetime import datetime; print(datetime.strptime('$build_date', '%Y-%m-%dT%H:%M:%SZ').strftime('%A, %B %d, %I:%M %p'))")
             amlg_notes=$(jq -r '.version."amalgam_display_title"' $site_packages/amalgam/lib/version.json)
             amlg_notes=$(python -c "notes = '$amlg_notes'.split(' -')[0] if 'PR Build' in '$amlg_notes' else '$amlg_notes'; print(notes)")
-            amlg_version=$(echo "$amlg_version ($build_date)")
+            amlg_version=$(echo "Prerelease ($build_date)")
           else
             # Version is a release
             amlg_notes=$(echo "Release version embedded in the installed \`amalgam-lang-py\`")
