--- a/.github/workflows/scan-pull-request.yml
+++ b/.github/workflows/scan-pull-request.yml
@@ -56,11 +56,14 @@ jobs:
           # Allow this to fail in case there are no 'main' requirements
           pip download -r requirements-3.11.txt -d ./dist || true
           # Remove upstream Howso packages since we don't want these to be scanned
+          # Also omit jupyter_core and jupyter_client because JFrog does not correctly determine their licenses
           pip uninstall amalgam-lang howso-engine howso-synthesizer howso-validator howso-validator-enterprise howso-visuals howso-openapi-client -y
-          declare -a arr=("amalgam_lang" "howso_engine" "howso_synthesizer" "howso_validator" "howso_validator_enterprise" "howso_visuals" "howso_openapi_client")
+          declare -a arr=("amalgam_lang" "howso_engine" "howso_synthesizer" "howso_validator" "howso_validator_enterprise" "howso_visuals" "howso_openapi_client" "jupyter_core" "jupyter_client")
           for PKG in "${arr[@]}"; do
             rm -f ./dist/$PKG*
           done
+          # Remove py==1.11.0 due to a known security vulnerability (TODO: remove this when a new version is released)
+          rm -f ./dist/py-1.11.0-py2.py3-none-any.whl
           ls ./dist
 
       - uses: jfrog/setup-jfrog-cli@v3
