Update amalgam version check to be exact

--- a/.github/workflows/workflow-summary.yml
+++ b/.github/workflows/workflow-summary.yml
@@ -8,7 +8,7 @@ on:
         required: true
       validate-amlg-versions:
         type: boolean
-        description: Validate whether the embedded Amalgam versions in howso-engine and amalgam-lang-py are compatible (same major version)
+        description: Validate whether the embedded Amalgam versions in howso-engine and amalgam-lang-py are compatible
         required: false
         default: false
 
@@ -137,7 +137,7 @@ jobs:
             engine_amlg_version=$(jq -r ".dependencies.amalgam" $site_packages/howso/howso-engine/version.json)
             echo "Validating howso-engine Amalgam version $engine_amlg_version against amalgam-lang-py with Amalgam version $amlg_version"
             # Check major versions only
-            if [[ "${engine_amlg_version:0:1}" != "${amlg_version:0:1}" ]]; then
+            if [[ "${engine_amlg_version}" != "${amlg_version}" ]]; then
               echo "Critical failure: howso-engine Amalgam version ${engine_amlg_version} is incompatible with amalgam-lang-py embedded version ${amlg_version}"
               exit 1
             fi
