--- a/.github/workflows/set-metadata.yml
+++ b/.github/workflows/set-metadata.yml
@@ -420,6 +420,6 @@ jobs:
             echo "Setting release version"
             echo "version=${{ steps.set-release-version.outputs.version }}" >> $GITHUB_OUTPUT
           else
-            echo "There was a problem (version could not be determined)"
-            exit 1
+            echo "Version could not be determined"
+            echo "version=0.0.0" >> $GITHUB_OUTPUT
           fi
