Update id-token permissions

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -39,6 +39,7 @@ jobs:
     permissions:
       contents: write
       pull-requests: write
+      id-token: write
     environment:
       name: ${{ inputs.publish_location }}
     env:
