--- a/.github/workflows/compile-requirements.yml
+++ b/.github/workflows/compile-requirements.yml
@@ -109,8 +109,13 @@ jobs:
           echo "Installing pyenv"
           curl https://pyenv.run | bash
           export PYENV_ROOT="$HOME/.pyenv"
+          
+          echo "PYENV_ROOT=$HOME/.pyenv" >> $GITHUB_ENV
+          echo "$PYENV_ROOT/bin" >> $GITHUB_PATH
+          echo "$PYENV_ROOT/shims" >> $GITHUB_PATH
           command -v pyenv >/dev/null || export PATH="$PYENV_ROOT/bin:$PATH"
           eval "$(pyenv init -)"
+          echo "Path is ... $PATH"
           # Compile requirements
           declare -a arr=("3.8" "3.9" "3.10" "3.11")
           for version in "${arr[@]}"; do
