--- a/.github/workflows/compile-requirements.yml
+++ b/.github/workflows/compile-requirements.yml
@@ -109,6 +109,10 @@ jobs:
           echo "Installing pyenv"
           curl https://pyenv.run | bash
           export PYENV_ROOT="$HOME/.pyenv"
+          
+          echo "PYENV_ROOT=$HOME/.pyenv" >> $GITHUB_ENV
+          echo "$PYENV_ROOT/bin" >> $GITHUB_PATH
+          echo "$PYENV_ROOT/shims" >> $GITHUB_PATH
           command -v pyenv >/dev/null || export PATH="$PYENV_ROOT/bin:$PATH"
           eval "$(pyenv init -)"
           # Compile requirements
@@ -118,6 +122,7 @@ jobs:
             # Install Python
             pyenv install $version.1
             pyenv local $version.1
+            python --version
             python -m pip install --upgrade pip
             bash -l
             # Set extra index URL
@@ -158,6 +163,10 @@ jobs:
       - name: Generate third-party licenses
         id: gen-licenses
         run: |
+          which python
+          eval "$(pyenv init -)"
+          python --version
+          pip list
           rm -f ./LICENSE-3RD-PARTY.txt
           # Set extra index URL
           if [[ -n "${{ secrets.JFROG_ACCESS_TOKEN }}" ]]; then
