--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -94,10 +94,10 @@ jobs:
       - name: Move Howso Data to repo folder
         if: inputs.move-data == true
         run: |
-          pwd
-          ls -a
-          mkdir -p data && cp -r .dataset_cache/howso/ ./data/
-          ls -a ./data
+          mkdir -p data && cp -r .dataset_cache/howso/* ./data/
+          # Extract all compressed files
+          find ./data -type f -name "*.gz" -print0 | xargs -0 gunzip
+          ls -a ./data/NYC_parking
 
       - name: Set up Docker
         if: inputs.setup-docker == true
