--- a/.github/workflows/workflow-summary.yml
+++ b/.github/workflows/workflow-summary.yml
@@ -11,6 +11,11 @@ on:
         description: Validate whether the embedded Amalgam versions in howso-engine and amalgam-lang-py are compatible
         required: false
         default: false
+      requirements_install_dir:
+        type: string
+        description: The location of the build.sh script to use for requirements installation
+        required: false
+        default: .
 
 jobs:
 
@@ -71,7 +76,8 @@ jobs:
           if [[ -n "${{ secrets.JFROG_ACCESS_TOKEN }}" ]]; then
             export PIP_EXTRA_INDEX_URL=https://vsts-build@diveplane.com:${{ secrets.JFROG_ACCESS_TOKEN }}@dpbuild.jfrog.io/artifactory/api/pypi/pypi-edge/simple
           fi
-          ./bin/build.sh install_deps 3.11
+          echo "Installing from ${{ inputs.requirements_install_dir }}/bin/build.sh"
+          ${{ inputs.requirements_install_dir }}/bin/build.sh install_deps 3.11
           # If the current repo is amalgam-lang-py or howso-engine-py, uninstall the editable install and install the build artifact .whl
           if [[ "${{ github.event.repository.name }}" == "howso-engine-py" ]]; then
             echo "Installing howso-engine build artifact"
