--- a/.github/workflows/run-external.yml
+++ b/.github/workflows/run-external.yml
@@ -25,7 +25,7 @@ on:
         description: Disable caching mechanism
         required: false
         type: boolean
-        default: true
+        default: false
     outputs:
       run-id:
         value: ${{ jobs.run-external-workflow.outputs.run-id }}
