--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -136,7 +136,8 @@ jobs:
             #run_id=$(python -c "import json; import os; import sys; print(json.loads(sys.argv[1])[sys.argv[2].replace('\r', '')]['run_id'])" '${{ inputs.upstream-details }}' $repo)
             echo "run_type: $run_type, run_id: $run_id"
             IFS='-' read -r plat arch <<< "${{ inputs.amalgam-plat-arch }}"
-            if [[ "$repo" == "amalgam" ]]; then
+            if [[ "$repo" == "amalgam" && "${{ github.event.repository.name }}" == "amalgam-lang-py" ]]; then
+              # Necessary since a-l-py tests will be run with an editable install of a-l-py
               echo "Downloading and extracting Amalgam binaries for $plat/$arch..."
               gh $run_type download -D amalgam/lib/$plat/$arch -R "howsoai/$repo" -p "*${{ inputs.amalgam-plat-arch }}*" "$run_id"
               # Extract binaries
@@ -144,14 +145,15 @@ jobs:
               cp lib/* .
               ls -l
               cd ../../../..
-            elif [[ "$repo" == "howso-engine" ]]; then
+            elif [[ "$repo" == "howso-engine" && "${{ github.event.repository.name }}" == "howso-engine-py" ]]; then
+              # Necessary since hse-py tests will be run with an editable install of hse-py
               echo "Downloading and extracting Howso Engine CAMLs..."
               gh $run_type download -D howso/howso-engine -R "howsoai/$repo" -p "howso-engine-*" "$run_id"
               # Extract CAMLs
               cd howso/howso-engine && if [ ! -f *.tar.gz ]; then mv */*.tar.gz ./; fi && tar -xvzf *.tar.gz
               pwd && ls -l
               cd ../..
-            else
+            elif [[ "$repo" != "amalgam" && "$repo" != "howso-engine" ]]; then
               gh $run_type download -D $repo -R "howsoai/$repo" -p "*-py3-none-any*" "$run_id"
               # Needed because release/non-release downloads are different structure
               cd $repo && if [ ! -f *.whl ]; then mv */*.whl ./; fi
