Add matrix.target to test results upload

--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -235,7 +235,7 @@ jobs:
         if: always()
         uses: actions/upload-artifact@v4
         with:
-          name: "test-results-${{ inputs.platform-pretty }}-${{ inputs.python-version }}-${{ inputs.config-pretty }}"
+          name: "test-results-${{ matrix.target }}-${{ inputs.platform-pretty }}-${{ inputs.python-version }}-${{ inputs.config-pretty }}"
           path: junit/test-results.xml
 
   upload-test-results:
